# BSc-Thesis-Attribute-Based-Encryption

./: .gitignore  .gitmodules  Cargo.toml  README.md  bibliography.bib  deep_policy_generator.py  main.tex  settings.tex  test_policy_generator.py  test_policy_generator_bad.py
abe-kem/: Cargo.toml
abe-kem/src/: kem.rs  lib.rs  traits.rs
abe-utils/: Cargo.toml
abe-utils/src/: access_tree.rs  hash_to_group.rs  kem.rs  lib.rs  msp.rs  polynomial.rs  test_policies.rs
ac17-abe/: Cargo.toml
ac17-abe/src/: ac17_abe.rs  lib.rs
benches/: deeptree_bench.rs
chapters/: 02_background.tex  02_math_intro.tex
gpsw06-abe/: Cargo.toml
gpsw06-abe/src/: gpsw06_abe.rs  lib.rs
nrf52832-test/: Cargo.toml  Embed.toml  regular.txt  swapped.txt
nrf52832-test/.cargo/: config
nrf52832-test/src/: main.rs
nrf52840-evaluation/: .gdbinit  Cargo.toml  Embed.toml  memory.x
nrf52840-evaluation/.cargo/: config
nrf52840-evaluation/src/: main.rs  stackcheck.rs
pairing-nrf-test/: .gdbinit  Cargo.toml  Embed.toml  memory.x
pairing-nrf-test/src/: main.rs
pairing-test/: Cargo.toml
pairing-test/src/: main.rs
presentation/: .gitignore  .latexmkrc  _Einstellungen.tex  listings-rust.sty  presentation.tex
presentation/Ressourcen/: _Informationen.tex
presentation/Ressourcen/Praesentation/: Anfang.tex  Praeambel.tex  Praeambel16zu9.tex
presentation/figures/: 02_abe_system_overview-2.tex  02_abe_system_overview.tex  02_access_tree_shamir.tex  02_key_use_comparison.tex  02_sss.tex  06_diagrams.tex  06_diagrams_timing_1.tex  06_diagrams_timing_2.tex  abe_system_overview-1.tex  abe_system_overview-2.tex  abe_use_case.tex  diagram_flash.tex  diagrams_ram.tex  evaluation-tree.tex  pairings.tex  related_work_timeline.tex  related_work_timeline_full.tex  sample_access_tree.tex
src/: lib.rs  main.rs  yao_abe.rs
thesis/: .~lock.abe-comparison.ods#  abe-comparison.ods  bibliography.bib  glossaries.tex  listings-rust.sty  main.tex  settings.tex
thesis/chapters/: 01_introduction.tex  02_background.tex  03_challenges.tex  03_related-work.tex  04_constructions.tex  05_implementation.tex  06_evaluation.tex  07_conclusion.tex  A_laptop_measurements.tex
thesis/data/: bn-groupexp.csv  bn-groupop.csv  bn-pairing.csv  bn-smpl.csv  flash.csv  gpsw-ram.csv  gpsw06-laptop.csv  gpsw06-soc.csv  gpsw06.csv  grades.csv  ram.csv  yct-ram.csv  yct14-laptop.csv  yct14-soc.csv
thesis/figures/: 01_system_architecture.tex  02_abe_system_overview.tex  02_access_tree_shamir.tex  02_cp_kp_abe.tex  02_key_use_comparison.tex  02_sample_access_tree.tex  02_sss.tex  06_diagrams.tex  06_diagrams_flash.tex  06_diagrams_ram.tex  06_diagrams_timing.tex  A_laptop_timings.tex  tikzpics.tex
thesis/pages/: abstract.tex  acknowledgments.tex  disclaimer.tex  title.tex
x86-evaluation/: Cargo.toml  stack_analyzer.py
x86-evaluation/src/: main.rs
yao-abe-rust/: Cargo.toml
yao-abe-rust/.cargo/: config
yao-abe-rust/src/: lib.rs  yao_abe.rs
yct14-abe/: Cargo.toml  README.md
yct14-abe/src/: lib.rs  yao_abe.rs  yct14_abe.rs
