[package]
name = "yao-abe-rust"
version = "0.1.0"
authors = ["Daniel Bücheler <dabch@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elliptic-curve = "0.7.1"
p256 = { version = "0.6.0", features = [ "arithmetic" ]}
rand_core = { version = "0.5", features = [ "getrandom" ]}
aes = "0.6.0"
