[package]
name = "yao-abe-rust"
version = "0.1.0"
authors = ["Daniel Bücheler <dabch@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rabe-bn = "0.4.12"
elliptic-curve = "0.7.1"
p256 = { version = "0.6.0", features = [ "arithmetic" ]}
rand = "0.7.3"
#aes = "0.6.0"

[patch.crates-io]
rabe-bn = { path = "../rabe-bn-own"}
