[package]
name = "abe-kem"
version = "0.1.0"
authors = ["Daniel Buecheler <daniel.buecheler@tum.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.6.0"
ccm = { version = "0.3.0", default-features = false }
rand = { version = "0.7.3", default-features = false }
sha3 = { version = "0.9.1", default-features = false }
generic-array = "0.14.4"

[dev-dependencies]
rabe-bn = { path = "../../rabe-bn-own" }