[package]
name = "gpsw06_abe"
version = "0.1.0"
authors = ["Daniel Buecheler <daniel.buecheler@tum.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7.3", default-features = false }
aes = "0.6.0"
ccm =  { version = "0.3.0", default-features = false, features = ["heapless"] }
heapless = "0.5.6"
rabe-bn = { path = "../../rabe-bn-own", default-features = false }
abe-utils = { path = "../abe-utils/" }

[dev-dependencies.rand]
features = ["std"]
