[package]
name = "nrf52832-test"
version = "0.1.0"
authors = ["Daniel Bücheler <daniel.buecheler@tum.de>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
rtt-target = { version = "0.3.0", features = ["cortex-m"] }
nrf52832-hal = "0.10.0"

rand = { version = "0.7.3", default-features = false }
#yct14-abe = { path = "../yct14-abe/" }
heapless = "0.5.6"

rabe-bn = { path = "../../rabe-bn-own", default-features = false }

#rabe-bn = { path = "../../rabe-bn-own", default-features = false }
# rand = { version = "0.7.3", default-features = false }
aes = "0.6.0"
ccm =  { version = "0.3.0", default-features = false, features = ["heapless"] }
