[package]
name = "pairing-test"
version = "0.1.0"
authors = ["Daniel Bücheler <daniel.buecheler@tum.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rabe-bn = { path = "../../rabe-bn-own", default-features=false }
rand = "0.7.0"