[package]
name = "pairing-test"
version = "0.1.0"
authors = ["Daniel Bücheler <daniel.buecheler@tum.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rabe-bn = { path = "../../rabe-bn-own", default-features=false }
yao-abe-rust = { path = "../yao-abe-rust/" }
gpsw06_abe = { path = "../gpsw06-abe/" }
abe-utils = { path = "../abe-utils" }
rand = "0.7.0"
heapless = "0.5.6"