[package]
name = "yao-abe-rust"
version = "0.1.0"
authors = ["Daniel Bücheler <dabch@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rabe-bn = { version = "0.4.12", default-features = false }
#rabe = "0.2.4"
#rand = { version = "0.7.3", default-features = false }
rand = "0.7.3"
aes = "0.6.0"
ccm = "0.3.0"
heapless = "0.5.6"

#[dev-dependencies]
#criterion = "0.3"



[patch.crates-io]
rabe-bn = { path = "../../rabe-bn-own"}

#[[bench]]
#name = "deeptree_bench"
#harness = false
