[package]
name = "yao-abe-rust"
version = "0.1.0"
authors = ["Daniel Bücheler <dabch@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7.3", default-features = false }
aes = "0.6.0"
ccm =  { version = "0.3.0", default-features = false, features = ["heapless"] }
heapless = "0.5.6"
k256 = { version = "0.7.1", default-features = false, features = ["arithmetic"] }
elliptic-curve = { version = "0.8.4" }
abe-utils = { path = "../abe-utils" }

[dev-dependencies.rand]
version = ""
features = ["std"]
